tests/expected/task-1/err-cmpfunc-2.uc.out
---
test: run suites/task-1/err-cmpfunc-2.uc
---
suites/task-1/err-cmpfunc-2.uc:12:11: execution error: Non-integer arithmetic operation
      if (f == g) { // error: function comparison
            ^


exit: 1
